--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
+        "@mui/lab": "^6.0.0-beta.8",
         "@mui/material": "^6.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -23,6 +24,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
+        "@iconify/react": "^5.0.2",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
