--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 h11==0.14.0
 l==0.11.0
+packaging==24.1
 PyJWT==2.9.0
 python-engineio==4.9.1
 python-socketio==5.11.3
@@ -17,5 +18,6 @@ simple-websocket==1.0.0
 sqlparse==0.5.1
 uvicorn==0.30.6
 vcversioner==2.16.0.0
+whitenoise==6.7.0
 wsproto==1.2.0
 zope.interface==7.0.3
