--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
         "@emotion/styled": "^11.13.0",
         "@mui/lab": "^6.0.0-beta.8",
         "@mui/material": "^6.0.0",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.1",
+        "sass": "^1.77.8",
         "socket.io-client": "^4.7.5"
     },
     "devDependencies": {
