--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "dev": "vite --port 3000 --host",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
+        "format": "prettier --write './src/**/*.{tsx,ts}'",
         "preview": "vite preview"
     },
     "dependencies": {
